--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
+
         <!-- База данных (JPA + Hibernate) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
