--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+app.jwt.secret=???_?????????_????_???_????????
+app.jwt.expiration-minutes=1440
+spring.jpa.open-in-view=false
