--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,16 @@
             <version>1.18.24</version> <!-- или актуальная версия -->
             <scope>provided</scope>
         </dependency>
-        <!-- Lombok -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
 
     </dependencies>
